--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="subscription order form"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Maria Plieshka Coding Challenge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
